# Chatterbox-TTS-Extended

./: Chatter.py  README.md  main.py  pyproject.toml
chatterbox/src/chatterbox/: tts.py
